# myPicAlgo

./: .gitignore  .qmake.stash  CMakeLists.txt  Project.sln  README.md  dft.cpp  dft.h  dft.ui  idft.cpp  idft.h  idft.ui  lightgray.css  lsb.cpp  lsb.h  lsb.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myPicAlgo.pro  myPicAlgo.sln  myPicAlgo.vcxproj  myPicAlgo.vcxproj.filters  start.bat  ui_dft.h  ui_idft.h  ui_lsb.h  ui_mainwindow.h
qss/: myqss.qss
